--- a/Martify/Views/WindowControl.xaml
+++ b/Martify/Views/WindowControl.xaml
@@ -7,9 +7,11 @@
              xmlns:local="clr-namespace:Martify.Views"
               xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d" 
+             xmlns:ctrl="clr-namespace:Martify.Controls"
              d:DesignHeight="450" d:DesignWidth="800"
              Name="ucWindowControl"
              d:Style="{x:Null}">
+    
     <UserControl.Resources>
         <Style x:Key="CompletelyCustomButtonStyle" TargetType="Button">
             <Setter Property="Template">
@@ -17,7 +19,7 @@
                     <ControlTemplate TargetType="Button">
                         <Border Background="{TemplateBinding Background}"
                             BorderBrush="{TemplateBinding BorderBrush}"
-                            BorderThickness="0"
+                            BorderThickness="{TemplateBinding BorderThickness}"
                             CornerRadius="5">
                             <ContentPresenter HorizontalAlignment="Center"
                                           VerticalAlignment="Center"/>
@@ -25,48 +27,19 @@
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
-            <Setter Property="Margin" Value="2 10 10 10"/>
-            <Setter Property="Width" Value="30"/>
-            <Setter Property="Height" Value="30"/>
+
             <Setter Property="Background" Value="MediumSeaGreen"/>
             <Setter Property="Foreground" Value="White"/>
         </Style>
     </UserControl.Resources>
+    
     <Grid>
         <!-- Hover detection area that contains both dragging zone and buttons -->
         <Grid x:Name="HoverArea" 
-              Height="50"
+              Height="30"
               VerticalAlignment="Top"
               Background="Transparent">
-            <Grid.Triggers>
-                <EventTrigger RoutedEvent="MouseEnter">
-                    <BeginStoryboard>
-                        <Storyboard>
-                            <ObjectAnimationUsingKeyFrames Storyboard.TargetName="ControlButton" 
-                                                           Storyboard.TargetProperty="Visibility">
-                                <DiscreteObjectKeyFrame KeyTime="0:0:0" Value="{x:Static Visibility.Visible}"/>
-                            </ObjectAnimationUsingKeyFrames>
-                            <DoubleAnimation Storyboard.TargetName="ControlButton"
-                                           Storyboard.TargetProperty="Opacity"
-                                           From="0" To="1" Duration="0:0:0.3"/>
-                        </Storyboard>
-                    </BeginStoryboard>
-                </EventTrigger>
-                <EventTrigger RoutedEvent="MouseLeave">
-                    <BeginStoryboard>
-                        <Storyboard>
-                            <DoubleAnimation Storyboard.TargetName="ControlButton"
-                                           Storyboard.TargetProperty="Opacity"
-                                           From="1" To="0" Duration="0:0:0.3"/>
-                            <ObjectAnimationUsingKeyFrames Storyboard.TargetName="ControlButton" 
-                                                           Storyboard.TargetProperty="Visibility">
-                                <DiscreteObjectKeyFrame KeyTime="0:0:0.3" Value="{x:Static Visibility.Collapsed}"/>
-                            </ObjectAnimationUsingKeyFrames>
-                        </Storyboard>
-                    </BeginStoryboard>
-                </EventTrigger>
-            </Grid.Triggers>
-            
+
             <!-- Dragging Zone (covers full width) -->
             <Grid x:Name="Dragging_Zone" 
                   Background="Transparent">
@@ -78,34 +51,70 @@
                 </i:Interaction.Triggers>
             </Grid>
 
-            <!-- Control Buttons (on top of dragging zone) -->
-            <StackPanel x:Name="ControlButton"
-                        HorizontalAlignment="Right"
-                        VerticalAlignment="Top"
-                        Height="50" 
-                        Margin="0,0,10,0" 
-                        Orientation="Horizontal"
-                        Visibility="Collapsed"
-                        Background="Transparent">
-                
-                <Button Command="{Binding HideWindowCommand}"
-                        CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=UserControl}}" 
-                        Background="transparent"
-                        Height="30" Width="30"
-                        Style="{StaticResource CompletelyCustomButtonStyle}">
-                    <Image Height="20"
-                           Width="20"
-                           Source="/Resources/Images/minimize_program.png"/>
-                </Button>
-                
-                <Button Command="{Binding CloseWindowCommand}"
-                        CommandParameter="{Binding ElementName=ucWindowControl}"
-                        Background="transparent"
-                        Height="30" Width="30"
-                        Style="{StaticResource CompletelyCustomButtonStyle}">
-                    <Image Source="/Resources/Images/close_program.png"/>
-                </Button>
-            </StackPanel>
         </Grid>
+
+        <StackPanel HorizontalAlignment="Right"
+                    VerticalAlignment="Top"
+                    Margin="0,10,10,0" Orientation="Horizontal">
+            
+            <Button Background="Transparent" 
+                    BorderBrush="Transparent" 
+                    Foreground="Transparent"
+                    VerticalAlignment="Center"
+                    HorizontalAlignment="Center"
+                    Width="30" Height="30"
+                    Margin="0,0,10,0"
+                    IsTabStop="False"
+                    Style="{StaticResource CompletelyCustomButtonStyle}"
+                    Command="{Binding HideWindowCommand}"
+                    CommandParameter="{Binding ElementName=ucWindowControl}">
+                <Image Source="{StaticResource MinimizeProgram}"
+                       HorizontalAlignment="Center"
+                       VerticalAlignment="Center"
+                       Cursor="Hand">
+                    <Image.Style>
+                        <Style TargetType="Image">
+                            <Setter Property="Width" Value="20" />
+                            <Style.Triggers>
+                                <Trigger Property="IsMouseOver" Value="True">
+                                    <Setter Property="Width" Value="30" />
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Image.Style>
+                </Image>
+            </Button>
+            
+            
+            <Button Background="Transparent" 
+                    BorderBrush="Transparent" 
+                    Foreground="Transparent"
+                    VerticalAlignment="Center"
+                    HorizontalAlignment="Center"
+                    Width="30" Height="30"
+                    Margin="0,0,0,0"
+                    IsTabStop="False"
+                    Style="{StaticResource CompletelyCustomButtonStyle}"
+                    Command="{Binding CloseWindowCommand}"
+                    CommandParameter="{Binding ElementName=ucWindowControl}">
+                <Image Source="../Resources/images/close_program.png"
+                       HorizontalAlignment="Center"
+                       VerticalAlignment="Center"
+                       Cursor="Hand">
+                    <Image.Style>
+                        <Style TargetType="Image">
+                            <Setter Property="Width" Value="20" />
+                            <Style.Triggers>
+                                <Trigger Property="IsMouseOver" Value="True">
+                                    <Setter Property="Width" Value="30" />
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Image.Style>
+                </Image>
+            </Button>
+
+        </StackPanel>
+        
     </Grid>
 </UserControl>
