--- a/Martify/MainWindow.xaml
+++ b/Martify/MainWindow.xaml
@@ -44,15 +44,21 @@
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
 
-                    <Border Grid.Row="0" Background="#067FF8" CornerRadius="30,30,0,0"></Border>
-
-                    <Border Grid.Row="1" CornerRadius="0,0,30,30">
+                    <Border Grid.RowSpan="2" CornerRadius="30,30,30,30">
                         <Border.Background>
                             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                                <GradientStop Color="#067FF8"/>
+                                <GradientStop Color="#067FF8" Offset="0"/>
+                                <GradientStop Color="#067FF8" Offset="0.35"/>
                                 <GradientStop Color="#FF3654F1" Offset="1"/>
                             </LinearGradientBrush>
                         </Border.Background>
+                        <Border.Effect>
+                            <DropShadowEffect Color="Black" 
+                                              BlurRadius="20" 
+                                              ShadowDepth="5" 
+                                              Direction="0" 
+                                              Opacity="0.3"/>
+                        </Border.Effect>
                     </Border>
 
 
