--- a/Martify/Views/ProductSelection.xaml
+++ b/Martify/Views/ProductSelection.xaml
@@ -188,7 +188,7 @@
                 </ScrollViewer>
             </Grid>
 
-            <Border Grid.Column="1" Background="{DynamicResource CardBackground}" CornerRadius="20" Padding="15">
+            <Border Grid.Column="1" Background="{DynamicResource CardBackground}" CornerRadius="20" Padding="12.5">
                 <Border.Effect>
                     <DropShadowEffect Color="{DynamicResource ShadowColor}" BlurRadius="10" Opacity="0.2" ShadowDepth="2"/>
                 </Border.Effect>
@@ -200,10 +200,10 @@
                     </Grid.RowDefinitions>
 
                     <Grid Grid.Row="0" Margin="0,0,0,10">
-                        <TextBlock Text="Giỏ Hàng" FontSize="20" FontWeight="Bold" Foreground="{DynamicResource PrimaryText}"/>
+                        <TextBlock Text="Sản phẩm" FontSize="20" FontWeight="Bold" Foreground="{DynamicResource PrimaryText}" VerticalAlignment="Center"/>
                         <Button HorizontalAlignment="Right" Style="{StaticResource MaterialDesignIconForegroundButton}"
-                                Command="{Binding ClearCartCommand}" ToolTip="Xóa hết">
-                            <materialDesign:PackIcon Kind="DeleteSweep" Foreground="Red"/>
+                                Command="{Binding ClearCartCommand}" ToolTip="Xóa hết" Width="40" Height="40">
+                            <materialDesign:PackIcon Kind="DeleteSweep" Foreground="Red" VerticalAlignment="Center"/>
                         </Button>
                     </Grid>
 
@@ -232,10 +232,15 @@
                                         <ColumnDefinition Width="Auto"/>
                                     </Grid.ColumnDefinitions>
 
-                                    <StackPanel Grid.Column="0">
-                                        <TextBlock Text="{Binding Product.ProductName}" FontWeight="SemiBold" TextTrimming="CharacterEllipsis" Foreground="{DynamicResource PrimaryText}"/>
+                                    <Grid Grid.Column="0">
+                                        <Grid.RowDefinitions>
+                                            <RowDefinition/>
+                                            <RowDefinition Height="30"/>
+                                        </Grid.RowDefinitions>
 
-                                        <StackPanel Orientation="Horizontal" Margin="0,5,0,0">
+                                        <TextBlock Grid.Row="0" Text="{Binding Product.ProductName}" FontWeight="SemiBold" TextTrimming="CharacterEllipsis" Foreground="{DynamicResource PrimaryText}"/>
+
+                                        <StackPanel Grid.Row="1" Orientation="Horizontal" Margin="0,5,0,0" VerticalAlignment="Bottom">
                                             <Button Style="{StaticResource MaterialDesignIconForegroundButton}" 
                                                     Width="20" Height="20" Padding="0"
                                                     Command="{Binding DataContext.DecreaseQuantityCommand, RelativeSource={RelativeSource AncestorType=UserControl}}"
@@ -260,19 +265,27 @@
                                                        Foreground="{DynamicResource SecondaryText}" 
                                                        VerticalAlignment="Center" Margin="10,0,0,0" FontSize="12"/>-->
                                         </StackPanel>
-                                    </StackPanel>
+                                    </Grid>
 
-                                    <StackPanel Grid.Column="1" Orientation="Horizontal" VerticalAlignment="Center">
-                                        <TextBlock Text="{Binding TotalAmount, StringFormat={}{0:N0}}" 
+                                    <Grid Grid.Column="1">
+                                        <Grid.RowDefinitions>
+                                            <RowDefinition/>
+                                            <RowDefinition Height="30"/>
+                                        </Grid.RowDefinitions>
+
+                                        <StackPanel Grid.Row="1" Orientation="Horizontal" VerticalAlignment="Bottom">
+                                            <TextBlock Text="{Binding TotalAmount, StringFormat={}{0:N0}}" 
                                                    FontWeight="Bold" Foreground="{DynamicResource PrimaryText}" 
                                                    VerticalAlignment="Center" Margin="0,0,10,0"/>
-                                        <Button Style="{StaticResource MaterialDesignIconButton}"
-                                                Height="24" Width="24"
+                                            <Button Style="{StaticResource MaterialDesignIconButton}"
+                                                Height="20" Width="20"
                                                 Command="{Binding DataContext.RemoveFromCartCommand, RelativeSource={RelativeSource AncestorType=UserControl}}"
                                                 CommandParameter="{Binding}">
-                                            <materialDesign:PackIcon Kind="Close" Width="16" Height="16" Foreground="Red"/>
-                                        </Button>
-                                    </StackPanel>
+                                                <materialDesign:PackIcon Kind="Close" Width="16" Height="16" Foreground="Red"/>
+                                            </Button>
+                                        </StackPanel>
+                                    </Grid>
+
                                 </Grid>
                             </DataTemplate>
                         </ListView.ItemTemplate>
