Add Invoices feature with UI, filtering, and details panel
Introduced a new Invoices view and viewmodel for managing and viewing invoices, including search and filter functionality and a sliding details panel. Updated navigation to include Invoices, replaced Receipts label, and enhanced InvoiceDetail model with a computed Total property. Added new fonts for improved UI styling, updated resource dictionaries, and made necessary database changes to support the feature. Supporting font and image files were also added.

--- a/Martify/Resources/XAML/FontRes.xaml
+++ b/Martify/Resources/XAML/FontRes.xaml
@@ -4,4 +4,7 @@
     <FontFamily x:Key="PasseroOne">/Martify;component/Resources/Fonts/PasseroOne-Regular.ttf#Passero One</FontFamily>
     <FontFamily x:Key="BungeeSpice">/Martify;component/Resources/Fonts/BungeeSpice-Regular.ttf#Bungee Spice</FontFamily>
     <FontFamily x:Key="Rubik">/Martify;component/Resources/Fonts/Rubik-Regular.ttf#Rubik</FontFamily>
+    <FontFamily x:Key="FleurDeleah">/Martify;component/Resources/Fonts/FleurDeLeah-Regular.ttf#Fleur De Leah</FontFamily>
+    <FontFamily x:Key="Charm">/Martify;component/Resources/Fonts/Charm-Regular.ttf#Charm</FontFamily>
 </ResourceDictionary>
+
