--- a/Martify/Resources/XAML/MainResource.xaml
+++ b/Martify/Resources/XAML/MainResource.xaml
@@ -10,6 +10,7 @@
     <ViewModels:ProductsVM x:Key="ProductsVM"></ViewModels:ProductsVM>
     <ViewModels:EmployeeVM x:Key="EmployeeVM"></ViewModels:EmployeeVM>
     <ViewModels:AddEmployeeVM x:Key="AddEmployeeVM"></ViewModels:AddEmployeeVM>
+    <ViewModels:InvoicesVM x:Key="InvoicesVM"></ViewModels:InvoicesVM>
 
     <Storyboard x:Key="GradientRotateStoryboard"
                     RepeatBehavior="Forever">
