--- a/Martify/Views/SidePanel.xaml
+++ b/Martify/Views/SidePanel.xaml
@@ -408,14 +408,15 @@
                         </Setter>
                     </Style>
 
-                    <Style x:Key="receipts_listboxitem_style"
+                    <Style x:Key="invoices_listboxitem_style"
                            TargetType="ListBoxItem">
                         <Setter Property="Template">
                             <Setter.Value>
                                 <ControlTemplate>
                                     <RadioButton IsChecked="{Binding Path=IsSelected, 
                                                                        RelativeSource={RelativeSource TemplatedParent}}"
-                                                 GroupName="SidePanelGroup">
+                                                 GroupName="SidePanelGroup"
+                                                 Command="{Binding DataContext.Navigation.InvoicesCommand, ElementName=ucPanel}">
 
                                         <RadioButton.Style>
 
@@ -423,9 +424,9 @@
                                                    BasedOn="{StaticResource SidePanelStyle}">
 
                                                 <Setter Property="TextBlock.Text"
-                                                        Value="Receipts" />
+                                                        Value="Invoices" />
                                                 <Setter Property="Content"
-                                                        Value="RECEIPTS" />
+                                                        Value="INVOICES" />
 
                                                 <Setter Property="Tag"
                                                         Value="{StaticResource ReceiptActive}" />
@@ -529,9 +530,9 @@
                              Grid.Row="3"
                              Style="{StaticResource staff_listboxitem_style}" />
 
-                <ListBoxItem x:Name="receipts_sidepanel_listboxitem"
+                <ListBoxItem x:Name="invoices_sidepanel_listboxitem"
                              Grid.Row="4"
-                             Style="{StaticResource receipts_listboxitem_style}" />
+                             Style="{StaticResource invoices_listboxitem_style}" />
 
                 <ListBoxItem x:Name="settings_sidepanel_listboxitem"
                              VerticalAlignment="Bottom"
